--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
       <option value="2" selected>Lockeport, Nova Scotia</option>
       <option value="3">Mississauga, Ontario</option>
     </select>
+
+    <label for="radiusSelect">Radius (km) around Lockeport:</label>
+    <select id="radiusSelect">
+      <option value="10">10</option>
+      <option value="50">50</option>
+      <option value="100" selected>100</option>
+      <option value="250">250</option>
+    </select>
+
     <button id="refreshBtn">Refresh</button>
   </div>
 
