--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
         <th>Model</th>
         <th>Altitude (ft)</th>
         <th>Speed (kt)</th>
+        <th id="distanceHeader" class="sortable">Distance (km)</th>
         <th>Look</th>
       </tr>
     </thead>
