--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
     </select>
 
     <button id="refreshBtn">Refresh</button>
+
+    <label class="auto-refresh">
+      <input type="checkbox" id="autoRefreshToggle" />
+      Auto-refresh (5s)
+    </label>
   </div>
 
   <div id="status"></div>
