--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
 
     <button id="refreshBtn">Refresh</button>
 
-    <label class="auto-refresh">
-      <input type="checkbox" id="autoRefreshToggle" />
-      Auto-refresh (5s)
+    <label class="airspace-toggle">
+      <input type="checkbox" id="airspaceToggle" />
+      Show airspace
     </label>
   </div>
 
