--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
 
     <button id="refreshBtn">Refresh</button>
 
+    <label class="auto-refresh-toggle">
+      <input type="checkbox" id="autoRefreshToggle" />
+      Auto-refresh (5s)
+    </label>
+
     <label class="airspace-toggle">
       <input type="checkbox" id="airspaceToggle" />
       Show airspace
